--- a/src/components/ScrollFloat.css
+++ b/src/components/ScrollFloat.css
@@ -1,9 +1,12 @@
 .scroll-float {
   overflow: hidden;
+  display: block;
+  width: 100%;
 }
 
 .scroll-float-text {
   display: inline-block;
+  width: 100%;
   font-size: clamp(1.6rem, 8vw, 10rem);
   font-weight: 900;
   text-align: center;
